fix z-index

--- a/porched/style.css
+++ b/porched/style.css
@@ -8,7 +8,7 @@ body {
 
 .full.height > .toc {
   position: fixed;
-  z-index: 6;
+  z-index: 20;
   width: 300px;
   height: 750px;
   -webkit-box-flex: 0;
